# code-obfuscator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MCP_SERVER_PLAN.md  Makefile  README.md  install
.agent/prompts/: add-migration.md  create-endpoint.md  debug-issue.md  develop-epic.md  develop-feature.md  refactor-module.md  system-prompt.md  test-feature.md
.agent/rules/: readme-sync-guide.md  security.md  testing.md
.agent/workflows/: add-migration.md  create-endpoint.md  debug-issue.md  develop-epic.md  develop-feature.md  refactor-module.md  test-feature.md
.codex/: AGENTS.override.md
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json
.opencode/agents/: designer.md  developer.md  devops-engineer.md  pm.md  product-owner.md  qa.md  team-lead.md
.opencode/commands/: add-migration.md  code-review-workflow.md  create-endpoint.md  debug-issue.md  develop-epic.md  develop-feature.md  development-cycle-workflow.md  feature.md  project-setup-workflow.md  (+2 more)
docker/: e2e.Dockerfile  mcp.Dockerfile
docs/: DETAILS.md  MCP_SERVER_PLAN.md  MCP_TOOLS.md  SAMPLES.md
scripts/: e2e_blackbox.sh  install.ps1  install.sh  package-release.sh  run-e2e-full.sh  run-mcp-docker.sh
src/: cli.rs  config.rs  error.rs  fs_ops.rs  language.rs  main.rs  mapping.rs  mcp_logging.rs  obfuscator.rs  ollama.rs  transform.rs  tui.rs
test/: e2e_blackbox.sh  mcp_configure.sh  prompt.txt  prompt_extract_sql.txt  prompt_general.md
test-projects/: mapping.json
tests/: e2e.rs  install_script.rs  mcp_server.rs  perf_benchmark.rs  security_tests.rs  svt.rs
(+50 files in other folders)
