[package]
name = "code-obfuscator"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "CLI tool to obfuscate/deobfuscate source code for AI agent workflows"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
rand = "0.9"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
